samples/_failures_safe/1761448521_8e4fbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10744795.c: In function ‘main’:
./samples/SAFE/__tmp_10744795.c:160:5: error: ‘add’ undeclared (first use in this function)
  160 |     add
      |     ^~~
./samples/SAFE/__tmp_10744795.c:160:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_10744795.c:160:8: error: expected ‘;’ at end of input
  160 |     add
      |        ^
      |        ;
./samples/SAFE/__tmp_10744795.c:160:5: error: expected declaration or statement at end of input
  160 |     add
      |     ^~~
